--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,6 +111,19 @@ services:
     networks:
       - trino-network
 
+  minio:
+    hostname: minio
+    image: 'minio/minio:RELEASE.2024-05-10T01-41-38Z'
+    container_name: minio_league
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - ./minio:/data
+    command: server /data --console-address ":9001"
+    networks:
+      - trino-network
+
   trino:
     container_name: trino
     image: 'trinodb/trino:448'
