--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -98,7 +98,7 @@ services:
     hostname: mysql
     image: mysql:lts
     ports:
-      - 3306:3306
+      - 3307:3307
     environment:
       MYSQL_DATABASE: league_default
       MYSQL_USER: league
@@ -108,6 +108,22 @@ services:
       - 3306
     volumes:
       - ./mysql:/var/lib/mysql
+    networks:
+      - trino-network
+  mysql-metastore:
+    hostname: mysql-metastore
+    image: mysql:lts
+    ports:
+      - 3306:3306
+    environment:
+      MYSQL_DATABASE: hive
+      MYSQL_USER: hive
+      MYSQL_PASSWORD: hive_default_password
+      MYSQL_ROOT_PASSWORD: hive_root_password
+    expose:
+      - 3306
+    volumes:
+      - ./mysql-metastore:/var/lib/mysql
     networks:
       - trino-network
 
@@ -132,6 +148,26 @@ services:
       - 8085:8085
     volumes:
       - ./trino:/etc/trino
+    networks:
+      - trino-network
+        
+  hive:
+    container_name: hive
+    image: 'apache/hive:4.0.0'
+    hostname: hive
+    environment:
+      - METASTORE_DB_HOSTNAME=mysqlmetastore
+      - HIVE_CUSTOM_CONF_DIR=/hive_custom_dir
+      - HADOOP_CLASSPATH=/opt/hadoop/share/hadoop/tools/lib/aws-java-sdk-bundle-1.12.730.jar:/opt/hadoop/share/hadoop/tools/lib/hadoop-aws-3.3.6.jar
+      - HIVE_VERSION=4.0.0
+      - SERVICE_NAME=metastore
+    ports:
+      - 9083:9083
+    volumes:
+      - ./conf:/hive_custom_dir
+      - ./conf/jars/mysql-connector-j-8.4.0.jar:/opt/hive/lib/mysql-connector-j-8.4.0.jar
+      - ./conf/jars/aws-java-sdk-bundle-1.12.730.jar:/opt/hive/lib/aws-java-sdk-bundle-1.12.730.jar
+      - ./conf/jars/hadoop-aws-3.3.6.jar:/opt/hive/lib/hadoop-aws-3.3.6.jar
     networks:
       - trino-network
 
