fix: adjusting README.md

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,12 @@
 LEAGUE_CHAMPIONS_URL=https://ddragon.leagueoflegends.com/cdn/
-LEAGUE_VERSIONS_URL=https://ddragon.leagueoflegends.com/realms/
+LEAGUE_VERSIONS_URL=https://ddragon.leagueoflegends.com/realms
 LEAGUE_REALM=br
 LEAGUE_LANG=pt_BR
+MINIO_ACCESS_KEY=5BhQJIs21n5bDDB4M8Di
+MINIO_SECRET_KEY=C0YXxJFUgXm1ZuiAoOvp7i4zZJq1YzFAULWLiVlJ
+MINIO_URL=http://localhost:9000
+TRINO_HOST=http://localhost
+TRINO_PORT=8085
+TRINO_USER=trino
+TRINO_CATALOG=minio
+TRINO_SCHEMA=league_data
