--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,7 +111,7 @@ services:
       MYSQL_PASSWORD: league_default_password
       MYSQL_ROOT_PASSWORD: league_root_password
     expose:
-      - 3306
+      - 3307
     volumes:
       - ./mysql:/var/lib/mysql
     networks:
@@ -176,6 +176,7 @@ services:
       - ./conf/jars/mysql-connector-j-8.4.0.jar:/opt/hive/lib/mysql-connector-j-8.4.0.jar
       - ./conf/jars/aws-java-sdk-bundle-1.12.730.jar:/opt/hive/lib/aws-java-sdk-bundle-1.12.730.jar
       - ./conf/jars/hadoop-aws-3.3.6.jar:/opt/hive/lib/hadoop-aws-3.3.6.jar
+      - ./conf/scripts/hive-schema-4.0.0.derby.sql:/opt/hive/scripts/metastore/upgrade/derby/hive-schema-4.0.0.derby.sql
     networks:
       - trino-network
         
